--- a/server/package.json
+++ b/server/package.json
@@ -13,21 +13,24 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@ngrok/ngrok": "^1.5.2",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.2",
     "morgan": "^1.10.1",
-    "nodemon": "^3.1.10",
-    "prettier": "^3.6.2",
     "socket.io": "^4.8.1"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.9",
     "utf-8-validate": "^6.0.5"
+  },
+  "devDependencies": {
+    "@ngrok/ngrok": "^1.7.0",
+    "dotenv": "^17.2.3",
+    "ngrok": "^5.0.0-beta.2",
+    "nodemon": "^3.1.11",
+    "prettier": "^3.8.1"
   }
 }
