--- a/server/.env.prod
+++ b/server/.env.prod
@@ -1,7 +1,19 @@
+PORT=
+NODE_ENV=
 MONGODB_URI=
-# Put MongoDB Atlas URI here
+
+MODEL_SERVER_URL=
+
 ACCESS_TOKEN_SECRET=
 ACCESS_TOKEN_EXPIRY=
 CORS_ORIGIN=
+
 NGROK_AUTHTOKEN=
 NGROK_DOMAIN=
+
+RAZORPAY_KEY_ID=
+RAZORPAY_KEY_SECRET=
+RAZORPAY_WEBHOOK_SECRET=
+
+EMAIL_USER=
+EMAIL_PASS=#App_passwords_for_Gmail
