Add Donation page

--- a/server/.env.prod
+++ b/server/.env.prod
@@ -11,12 +11,12 @@ CORS_ORIGIN=
 NGROK_AUTHTOKEN=
 NGROK_DOMAIN=
 
-RAZORPAY_KEY_ID=
+RAZORPAY_KEY_ID=test_xxxxxxxxxxxxxxxx
 RAZORPAY_KEY_SECRET=
 RAZORPAY_WEBHOOK_SECRET=
 
 EMAIL_USER=
-EMAIL_PASS=#App_passwords_for_Gmail
+EMAIL_PASS=
 
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
