Added Report Submission

--- a/server/.env.prod
+++ b/server/.env.prod
@@ -1,17 +1,22 @@
 PORT=
 NODE_ENV=
+#MONGODB_URI=mongodb://localhost:27017/iiit_demo
 MONGODB_URI=
 
 MODEL_SERVER_URL=
 
 ACCESS_TOKEN_SECRET=
 ACCESS_TOKEN_EXPIRY=
+
+REFRESH_TOKEN_SECRET=
+REFRESH_TOKEN_EXPIRY=
+
 CORS_ORIGIN=
 
 NGROK_AUTHTOKEN=
 NGROK_DOMAIN=
 
-RAZORPAY_KEY_ID=rzp_test_WwS5ycQJbf1xri
+RAZORPAY_KEY_ID=
 RAZORPAY_KEY_SECRET=
 RAZORPAY_WEBHOOK_SECRET=
 
